--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hardhat": "^2.12.6"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.1"
+    "@openzeppelin/contracts": "^4.8.1",
+    "bootstrap": "^5.2.3"
   }
 }
