--- a/ddy_front/package.json
+++ b/ddy_front/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.2",
     "@types/jquery": "^3.5.16",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
