--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "dotenv": "^16.0.3",
     "hardhat": "^2.12.6"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.1",
-    "bootstrap": "^5.2.3"
+    "bootstrap": "^5.2.3",
+    "ethers": "^5.7.2",
+    "react-toastify": "^9.1.1"
   }
 }
