--- a/ddy_front/package.json
+++ b/ddy_front/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "eslint-config-prettier": "^8.6.0",
+    "ethers": "^5.7.2",
     "jquery": "^3.6.3",
     "next": "13.1.4",
     "react": "^18.2.0",
